# anti-ctf-tasks

./: .gitignore  ANTI_CTF_SUBMISSION.md  ANTIctf.md  CTF_TASK_STATEMENTS.md  FLAGS.md  README.md  TEACHER_VERIFICATION.md  WRITEUPS.md
.github/workflows/: cmake-multi-platform.yml
Deliverables/: README.md  VOID_CONFIG_windows.txt
ImGui-Cheat-Menu-master/: README.md  SPOILER_HOW_TO_SOLVE.md  WRITEUP_ORG.md  assessment.md  custom.cpp  globals.h  main.cpp  void_seal.h  void_seal_frag.h
Source/: README.md
Source/EclipseConfig/: README.md  main.cpp
Source/ImGuiVaultFresh/: CMakeLists.txt  README.md  app.cpp  main.cpp
Source/SharedAssets/: README.md  embed.rc.in  resource_ids.h
Source/TimingGateFSM/: CMakeLists.txt  README.md  app.cpp  app.h  main.cpp
Task-03-VOID-CONFIG/: BUILD.md  TASK.md  assessment.md  custom.h  imgui.ini
Task-03-VOID-CONFIG/imgui/: imgui_widgets.cpp
docs/: GITHUB_PROFILE_README.md  GITHUB_PROFILE_SETUP.md
